variaciones de estados y re-renderizacion

--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "repository": "https://github.com/PeterGabrielVE/hola_mundo_next.git",
   "author": "gaboleal123@gmail.com",
   "license": "MIT",
-  "scripts":{
-	"dev":"next",
-	"build":"next build",
-	"start":"next start"
-	}, 
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "^9.0.7",
     "react": "^16.10.1",
+    "react-color-tools": "^1.0.0",
     "react-dom": "^16.10.1"
   }
 }
